cluster/apps/productivity/collabora/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: collabora-ingress-clients
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: collabora-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: collabora-ingress-network
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: collabora-nextcloud-clients
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: collabora-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: collabora-nextcloud-clients
