cluster/apps/productivity/collabora/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: collabora-ingress
spec:
  endpointSelector:
    matchLabels:
      app: collabora
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-haproxy
            k8s:app.kubernetes.io/name: haproxy-ingress
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: productivity
            k8s:app.kubernetes.io/instance: nextcloud
      toPorts:
        - ports:
            - port: "9980"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: service-mesh
      toPorts:
        - ports:
            - port: "4191"
              protocol: TCP
